# edgecam

./: README.md
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/com/example/edgedetectorapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/edgedetectorapp/: MainActivity.java  NativeLib.java
app/src/main/res/values/: themes.xml
app/src/test/java/com/example/edgedetectorapp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
